body width on mobile fixed

--- a/app/foundation.css
+++ b/app/foundation.css
@@ -173,6 +173,7 @@ html {
 body {
   margin: 0 !important;
   padding: 0 !important;
+  display: inline-block;
   background: #ccf0fd;
   font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
